@@ -1,3 +1,13 @@
+2004-10-21  Sebastien Bacher  <seb128@debian.org>
+
+	* capplets/default-applications/gnome-default-applications-properti
+	es-structs.c:
+	* capplets/file-types/service-info.c:
+	* control-center/control-center-categories.c:
+	(load_information_to_information):
+	* control-center/control-center.c: (gnome_cc_about):
+	Changed the "Gnome" occurences to "GNOME" (Closes: #152085).
+
 2004-10-17  Paolo Borelli  <pborelli@katamail.com>
 
 	* capplets/common/activate-settings-daemon.c: fix leak, patch by
